changed static routefolder, removed api endpoint, add testadventure.json
